# dependency_injector-playground

./: README.md  pyproject.toml
src/: container.py  fake_db_session.py  fake_functions.py  fake_repositories.py  fake_repository.py  main.py
tests/: conftest.py  test_fake_repository.py  test_how_container_works.py
